--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ github_username: MihirBafna # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: mihirbafna14 # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
+scholar_userid: wZLz918AAAAJ # your Google Scholar ID
 orcid_id: 0000-0001-8182-5888 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
