added NSUR Poster

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,7 +24,7 @@
       description:
         - Expected Graduation May 2023
         - 4.0 GPA
-        - Specializating in Machine Learning/Theory
+        - Specializing in Machine Learning/Theory
         - Founder of Computational Biology Club
     - title: High School
       institution: Westview High School, San Diego, CA
