--- a/_config.yml
+++ b/_config.yml
@@ -52,10 +52,10 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: MihirBafna # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
+twitter_username: mihirbafna14 # your Twitter handle
 linkedin_username: mihirbafna14 # your LinkedIn user name
 scholar_userid: wZLz918AAAAJ # your Google Scholar ID
-orcid_id: # your ORCID ID  0000-0001-8182-5888
+orcid_id: 0000-0001-8182-5888 # your ORCID ID  0000-0001-8182-5888
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
