--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -19,3 +19,23 @@
 "HechenLi":
   - firstname: ["Hechen", "H."]
     url: https://sites.cc.gatech.edu/grads/h/hli691/
+
+"OnkarGujral":
+  - firstname: ["Onkar", "O."]
+    url: https://www.linkedin.com/in/onkar-singh-gujral-b9ab8626a/
+
+"BonnieBerger":
+  - firstname: ["Bonnie", "B."]
+    url: https://people.csail.mit.edu/bab/
+
+"JianzhuMa":
+  - firstname: ["Jianzhu", "J."]
+    url: https://majianzhu.com/
+
+"EricAlm":
+  - firstname: ["Eric", "E."]
+    url: https://be.mit.edu/faculty/eric-alm/
+
+"BowenJing":
+  - firstname: ["Bowen", "B."]
+    url: https://people.csail.mit.edu/bjing/
